# Reeinvent-Pitch-Deck-Design

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  SKILL.md  reference.md  signal-deck.html
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
scripts/: embed-fonts.py
skills/reeinvent-pitch-deck-design/: CLAUDE.md  DESIGN.md  SKILL.md
skills/reeinvent-pitch-deck-design/generator/: pyproject.toml
skills/reeinvent-pitch-deck-design/generator/examples/: minimal.json  reeinvent-full.json
skills/reeinvent-pitch-deck-design/generator/reeinvent_pitch_deck/: __init__.py  __main__.py  assets.py  build.py  cli.py  embed.py  helpers.py  inspect.py  master.py  spec.py  theme.py  verify.py
skills/reeinvent-pitch-deck-design/generator/reeinvent_pitch_deck/builders/: __init__.py  agenda.py  closing.py  content.py  cover.py  divider.py  intro_split.py  quote.py  service_detail.py  stat.py  success_story.py  three_up.py  two_column.py
skills/reeinvent-pitch-deck-design/generator/tests/: test_build.py  test_spec.py
skills/reeinvent-pitch-deck-design/scripts/: embed-fonts.py  render-pdf.py
skills/reeinvent-pitch-deck-design/templates/: README.md
